--- a/src/components/style/style2.css
+++ b/src/components/style/style2.css
@@ -4,7 +4,7 @@ body {
     height: 100%;
     width: 100%;
     overflow: hidden;
-    background-color: #fff;
+    background-color: #130f40;
     font-family: "Quicksand", sans-serif;
 }
 
@@ -36,6 +36,33 @@ body {
         border-radius: 10px;
     }
 
+    .main-admin {
+        position: relative;
+        margin-top: -150px;
+        padding: 20px;
+        z-index: 9990;
+        box-shadow: "0px 0px 15px rgba(0, 0, 0, 0.25)";
+        background-color: rgb(255, 255, 255, 0.9);
+        padding: 20px;
+        overflow: auto;
+        transition: linear 0.3s;
+        height: 80%;
+        border-radius: 10px;
+        overflow: hidden;
+    }
+
+    .table-container{
+        padding: 20px;
+        z-index: 99;
+        box-shadow: "0px 0px 15px rgba(0, 0, 0, 0.25)";
+        background-color: rgb(255, 255, 255, 0.9);
+        margin: 20px 0px;
+        overflow: auto;
+        transition: linear 0.3s;
+        height: 65%;
+        border-radius: 10px;
+    }
+
     .header {
         display: flex;
         justify-content: center;
@@ -43,17 +70,41 @@ body {
         padding: 15px;
         background-color: black;
         color: white;
-        font-size: 20px;
+        font-size: 16px;
+        font-weight: bold;
+        border-radius: 10px 10px;
+    }
+
+    .footer{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 15px;
+        background-color: #273c75;
+        color: white;
+        font-size: 16px;
+        font-weight: bold;
+        border-radius: 10px 10px;
+    }
+
+    .footer-back{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 15px;
+        background-color: #e74c3c;
+        color: white;
+        font-size: 16px;
         font-weight: bold;
         border-radius: 10px 10px;
     }
 
     .tb {
         border-collapse: collapse;
-        width: 100%;
         margin-top: 20px;
         font-size: 12px;
         font-weight: bold;
+        width: 100%;
     }
     
     .tb td,
@@ -97,6 +148,108 @@ body {
     .bg img {
         width: 60%;
         z-index: 2;
+    }
+
+    .login-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 15px;
+        height: 80%;
+    }
+
+    .login-container input{
+        width: 100%;
+        margin: 5px 0px;
+        font-size: 16px;
+        border-radius: 10px 10px;
+        border: 1px solid black;
+        padding: 13px;
+    }
+
+    .login-container button{
+        width: 100%;
+        margin: 5px 0px;
+        font-size: 16px;
+        border-radius: 10px 10px;
+        border: 0px solid black;
+        padding: 13px;
+        background-color: #2d3436;
+        color: #fff;
+        font-weight: bold;
+    }
+
+    .open{
+        font-weight: bold;
+        color: #04aa6d;
+        font-style: italic;
+    }
+
+    .close{
+        font-weight: bold;
+        color: red;
+        font-style: italic;
+    }
+
+    .modal-container{
+        position: absolute;
+        display: none;
+        width: 100%;
+        height: 100%;
+        top: 1500px;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: rgb(255, 255, 255);
+        border-radius: 15px;
+        flex-direction: column;
+        transition: linear 0.3s;
+    }
+
+    .modal-header{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 15px;
+        background-color: black;
+        color: white;
+        font-size: 16px;
+        font-weight: bold;
+        border-radius: 10px 10px;
+        width: 75%;
+        margin: 20px 0px;
+    }
+
+    .modal-body{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 100%;
+        width: 75%;
+    }
+
+    .modal-body input{
+        width: 90%;
+        margin: 5px 0px;
+        font-size: 16px;
+        border-radius: 10px 10px;
+        border: 1px solid black;
+        padding: 13px;
+    }
+
+    .modal-body button{
+        width: 100%;
+        margin: 5px 0px;
+        font-size: 16px;
+        border-radius: 10px 10px;
+        border: 0px solid black;
+        padding: 13px;
+        background-color: #2d3436;
+        color: #fff;
+        font-weight: bold;
     }
     
 
@@ -174,6 +327,18 @@ body {
         align-items: center;
         padding: 15px;
         background-color: #273c75;
+        color: white;
+        font-size: 16px;
+        font-weight: bold;
+        border-radius: 10px 10px;
+    }
+
+    .footer-back{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 15px;
+        background-color: #e74c3c;
         color: white;
         font-size: 16px;
         font-weight: bold;
@@ -283,8 +448,7 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-        backdrop-filter: blur(15px);
-        background-color: rgb(255, 255, 255, 0.4);
+        background-color: rgb(255, 255, 255);
         border-radius: 15px;
         flex-direction: column;
         transition: linear 0.3s;
